# python3-gae-template

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
app/: __init__.py  app.yaml  main.py  model.py  requirements.txt
app/router/: admin.py  web.py
app/templates/: index.html
local/: japan_region.py  japan_regions.json
src/python3_gae_template/: main.py  prefecture.py
src/python3_gae_template/router/: admin.py  api.py  web.py
templates/: index.html  login.html
