[project]
name = "python3-gae-template"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.110.2",
    "uvicorn>=0.29.0",
    "mypy>=1.10.0",
    "jinja2>=3.1.3",
    "google-cloud-datastore>=2.19.0",
    "python-multipart>=0.0.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.1",
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python3_gae_template"]

[tool.rye.scripts]
serve = { cmd = "uvicorn src.python3_gae_template.main:app --reload --host 0.0.0.0" }
